# DBPedia

./: commands.sh  pyproject.toml  report.txt  run_commands.py  train_multiple.py  train_single.py
data/processed_graphs/eng/gat/: eval  test
src/: DataLoader.py  MultilingualDataLoader.py
src/layers/: EmbeddingLayer.py  TransformerLayers.py
src/models/: GraphAttentionModel.py  Transformer.py
src/trainers/: GATtrainer.py
src/utils/: Optimizers.py  PreprocessingUtils.py  beam_search.py  metrics.py  model_utils.py
src/webnlg_scripts/: benchmark_reader.py
vocabs/gat/eng/: src_vocab  train_vocab.model  train_vocab.vocab
vocabs/multi/multi/: train_vocab.model  train_vocab.vocab
