[tool.poetry]
name = "dbpedia"
version = "0.1.0"
description = ""
authors = ["kavyal2 <kavya9140@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src"}, {include = "tools"}
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
sentencepiece = "^0.2.0"
loguru = "^0.7.2"
tqdm = "^4.66.4"
networkx = "^3.3"
tensorflow = "2.16.1"
tensorflow-io-gcs-filesystem = "0.31.0"
keras = "3.0.0"
torch = "^2.3.1"
numpy = ">=1.23.5,<2.0.0"
typeguard = "^4.3.0"
tensorflow-intel = "^2.16.2"
tf-slim = "^1.1.0"
tf-keras = "2.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
